Copy map before writing to avoid errors